app/front/less/main/index.less
.fullsize() {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

body {
  font-family: 'Source Sans Pro', sans-serif;
}

#map {
  .fullsize();
}

@keyframes digitPop {
  0%{
    transform: scale(0.1) translateY(30px);
    opacity: 0;
  }
  15%{
    transform: scale(1) translateY(10px);
    opacity: 1;
  }
  80%{
    opacity: 1;
  }
  100%{
    transform: translateY(-15px);
    opacity: 0;
  }
}

@width: 46px;
@purple: #6d3e91;
@green: #95c11f;
@orange: #ea5b0c;

.station-marker {
  position: absolute;
  margin: -@width/2 0 0 -@width/2;
  width: @width;
  height: @width;

  .circle, canvas {
    position: absolute;
    width: @width;
    height: @width;
  }

  .circle {
    border-radius: @width;
    background-color: fade(@orange, 90%);
    overflow: hidden;
  }

  @textWidth: 32px;

  .text {
    position: absolute;
    width: @textWidth;
    height: @textWidth;
    font-weight: 600;
    color: @purple;
    text-align: center;
    line-height: @textWidth;
    border-radius: @textWidth;
    background-color: fade(white, 95%);
    margin: (@width - @textWidth) / 2 0 0 (@width - @textWidth) / 2;
  }

  @clusterWidth: 18px;

  .cluster {
    position: absolute;
    width: @clusterWidth;
    height: @clusterWidth;
    line-height: 14px;
    margin: -5px 0 0 14px;
    text-align: center;
    color: white;
    border: 2px solid @purple;
    background-color: @purple;
    border-radius: @clusterWidth;
  }

  .in, .out {
    position: absolute;
    width: @width * 2;
    left: 50%;
    top: 0;
    margin: -20px 0 0 -@width;
    text-align: center;
    z-index: 10;

    .change {
      padding: 2px 3px;
      font-size: 18px;
      animation: 1.7s digitPop both;
      background: rgba(255,255,255,0.8);
      border-radius: 6px;
      box-shadow: 0 0 3px rgba(0,0,0,0.3);
      border: 1px solid white;
      color: white;
      .fa{
        margin-bottom: -1px;
      }
    }

    .bike {
      font-size: 22px;
    }
  }

  .in .change{
    background: fade(@green, 90);
    border: 1px solid @green;
  }

  .out .change{
    background: fade(@orange, 90);
    border: 1px solid @orange;
  }
}

.position {
  font-size: 30px;
  color: @purple;
}

.leaflet-control-command {
  background-color: white;
  border-radius: 6px;
  padding: 5px 10px;
  margin-left: 60px;
  box-shadow: 0 0 5px rgba(0,0,0,.5);

  ul {
    padding: 0px;
    margin: 0px;
    list-style-type: none;
  }
}

li.available-bikes {
  color: @green;
}

li.free-slots {
  color: @orange;
}

li.total {
  color: @purple;
}

.station-popup {

  .leaflet-popup-content-wrapper {
    background: url('../img/popup.png') no-repeat 0 0;
    width: 200px !important;
    height: 155px;
    padding: 10px 0 0 15px;
    box-shadow: 0 0 10px rgba(0,0,0,.4);

    h3 {
      background: url('../img/logo_3m.jpg') no-repeat left center;
      padding-left: 30px !important;
    }

    ul {
      padding-left: 30px;
    }
  }

  .leaflet-popup-tip {
    border-top-color: #6d3e91;
  }
}

.leaflet-control-attribution {
  display: none;
}

